--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 body{
-    background-color: bisque;
+    background-color: #222;
+    color: white
+}
+h3{
+    color: #999;
+}
+.hastag{
+    color: #ffc900;
 }
