--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,16 @@ cite{
 /**CSS ID's and classes**/
 .hastag{
     color: #ffc900;
+    font-weight: 150;
 }
 .section{
     padding: 10px 100px 10px 100px;
+}
+#initial{
+    background-image: url(../images/Linux.png);
+    min-height: 280px; /** Because paddings are 10+10 **/
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #experience{
     background-color: white;
