--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ a:hover{
 }
 button{
     border-radius: 8px;
+    border: none;
 }
 
 /**CSS ID's and classes**/
@@ -110,6 +111,9 @@ button{
     padding-left: 15px;
     padding-right: 15px;
 }
+.moreinfo button:hover{
+    background-color: #ffc800b0;
+}
 /*About me Grid*/
 #aboutme{
     display: grid;
@@ -144,6 +148,8 @@ button{
 }
 .card img{
     border-radius: 15px 15px 0px 0px;
+    display:block;
+    margin: auto;
 }
 .card h3, .card h4, .card .moreinfo button, .card p{
     padding:0px 15px; 
