--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ button{
     background-color: #191919;
     border-radius: 14px;
 }
-.card img{
+.card img, .card video, .card iframe{
     border-radius: 15px 15px 0px 0px;
     display:block;
     margin: auto;
@@ -246,4 +246,16 @@ input[type="submit"]{
     padding: 10px;
     grid-column: 2/3;
     justify-self: end;
+}
+
+/* Footer */
+footer{
+    padding-left: 100px;
+    padding-right: 80px;
+}
+footer ul{
+    display:grid;
+    grid-template-columns: auto 1fr;
+    gap: 20px;
+    align-items: center;
 }
