--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,17 @@ button{
     grid-gap: 10px;
     align-content: space-around;
 }
+@media (min-width: 400px;){
+    .gridexp{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 30px 30px;
+        margin-bottom: 15px;
+        margin-top: 15px;
+    }
+}
 .cardexp{
     background-color: #494949;
     border-radius: 15px;
