--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h2{
 h3{
     color: #999;
     font-size: 18px;
-    font-weight: 300px;
+    font-weight: 300;
 }
 section{
     padding: 10px 100px 10px 100px;
@@ -62,13 +62,7 @@ a:any-link{
     color: white;
 }
 
-a:-webkit-any(){
-    color: white;
-}
 
-a:-moz-any-link{
-    color: white
-}
 a:hover{
     color: #ffc900;
 }
